# sota-spots

./: Cargo.toml  build.rs  flake.nix
src/: main.rs  spot_data.rs
src/resources/: resources.gresource.xml  spot_row.ui  window.ui
src/spot_object/: imp.rs  mod.rs
src/spot_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
