[package]
name = "sota-spots-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_8"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"

[build-dependencies]
glib-build-tools = "0.18.0"
